# protests

./: .gitignore  Cargo.toml  README.md  Settings.toml  package-lock.json  package.json  tailwind.config.js
assets/: main.css
locales/: en-US.ftl  en.ftl  sk.ftl
migrations/: 001__init.sql
src/: localizer.rs  main.rs  model.rs  repository.rs  routes_image.rs  routes_protest.rs  routes_user.rs  routes_utils.rs
templates/: base.html  macros.html  protest_add.html  protest_edit.html  protest_view.html  protests.html
