[package]
name = "protests"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
hyper = { version = "1.5.2", features = ["server"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
