[package]
name = "protests"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
hyper = { version = "1.5.2", features = ["server"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
fluent = "0.16.1"
unic-langid = "0.9.5"
intl-memoizer = "0.5.2"
once_cell = "1.20.2"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
config = { version = "0.15.4", features = ["toml"] }
